# DiscordBot

./: .gitignore  Cargo.toml  README.md
expense/: 2025-05-05.txt  2025-05-06.txt
src/: main.rs
