[package]
name = "hellobot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
chrono = { version = "0.4.41",features = ["serde"]}
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
bytes = "1.10.1"
